# libfaim

./: .cvsignore  BUGS  CHANGES  Makefile  Makefile.am  Makefile.rules  README  aim.h  aim_ads.c  aim_auth.c  aim_buddylist.c  aim_cbtypes.h  aim_chat.c  aim_chatnav.c  aim_conn.c  aim_ft.c  aim_im.c  aim_info.c  aim_login.c  aim_logoff.c  aim_meta.c  aim_misc.c  aim_msgcookie.c  aim_rxhandlers.c  aim_rxqueue.c  aim_search.c  aim_snac.c  aim_tlv.c  aim_txqueue.c  aim_util.c  configure.in  faimconfig.h  gen  libfaim.spec.in  md5.c  md5.h  mkbuildinfo.sh  mkinstalldirs
deprecated/: aim_global.c  aim_snac.c  discarded.c  tis_telnet_proxy.c  tis_telnet_proxy.h
faim/: aim.h  aim_cbtypes.h  faimconfig.h
include/: .cvsignore  Makefile.am  aim.h  aim_internal.h  faimconfig.h  md5.h
src/: .cvsignore  Makefile.am  admin.c  adverts.c  auth.c  bos.c  buddylist.c  chat.c  chatnav.c  conn.c  ft.c  im.c  info.c  login.c  md5.c  meta.c  misc.c  msgcookie.c  rxhandlers.c  rxqueue.c  search.c  snac.c  ssi.c  stats.c  tlv.c  txqueue.c
tcpdumps/: chat.txt  newim.txt  permitdeny.txt  randombits.txt
utils/: Makefile  Makefile.am
utils/aimdebugd/: Makefile  README  aimdebugd.c  file.c  icbm.c  network.c  network.h  samplescript
utils/aimdump/: Makefile  aimdump.h  icbmparse.c  main.c  util.c  util.h
utils/aimpasswd/: Makefile  aimpasswd.c
utils/docs/: libfaim-doc.pl  split-man.pl
utils/faimtest/: .cvsignore  Makefile  Makefile.am  chat.c  commands.c  faimtest.c  faimtest.h  ft.c  login.c
