dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/service.c)
AM_INIT_AUTOMAKE(libfaim, 0.99.4)

AM_CONFIG_HEADER(include/config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL

dnl Checks for libraries.
dnl Replace `main' with a function in -lfaim:
AC_CHECK_LIB(faim, aim_sessioninit)
dnl Replace `main' with a function in -lpcap:
dnl AC_CHECK_LIB(pcap, main)

LIBTOOL="$LIBTOOL --silent"

AC_ARG_ENABLE(debug,    [  --disable-debug         compile without debugging options],enable_debug=no,enable_debug=yes)

if test "$enable_debug" = yes ; then
        CFLAGS="$CFLAGS -Wall -g"
fi

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h)
AC_CHECK_FUNCS(getaddrinfo)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gethostname gettimeofday select socket strdup strstr strtol uname)

AC_CHECK_LIB(readline, rl_callback_handler_install,
	READLINELIB="-lreadline -lcurses",
	AC_MSG_ERROR(unable to find GNU readline),
	"-lcurses"
)

AC_SUBST(CFLAGS)
AC_SUBST(READLINELIB)

AC_OUTPUT([
	Makefile
	include/Makefile
	src/Makefile
	utils/Makefile
	utils/faimtest/Makefile
	libfaim.spec
])

