
lib_LTLIBRARIES = libfaim.la

libfaim_la_SOURCES =	admin.c		\
			adverts.c	\
			auth.c 		\
			bos.c		\
			buddylist.c	\
			chat.c		\
			chatnav.c	\
			conn.c		\
			ft.c		\
			im.c		\
			info.c		\
			invite.c	\
			login.c		\
			meta.c		\
			misc.c		\
			msgcookie.c	\
			popups.c	\
			rxhandlers.c	\
			rxqueue.c	\
			search.c	\
			snac.c		\
			ssi.c		\
			stats.c		\
			tlv.c		\
			translate.c	\
			txqueue.c	\
			util.c		\
			md5.c

CFLAGS += -I\$(top_srcdir)/include -DAIM_BUILDDATE=\"`date +%Y%m%d`\" -DAIM_BUILDTIME=\"`date +%H%M%S`\"

